--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <div class="row-four">
             <button class="operator" id="clear">AC</button>
             <button class="digit" id="0">0</button>
+            <button class="digit" id="floating-point">.</button> 
+            <button class="operator" id="delete-last">&lt;</button>
             <button id="equals">=</button>
             <button class="operator" id="division">/</button>
 
