--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button class="digit" id="3">3</button>
                 <button class="digit" id="6">6</button>
                 <button class="digit"id="9">9</button>
-                <button class="operator" id="+/-">+/-</button>
+                <button id="plus-minus">+/-</button>
             </div>
             <div class="column-four">
                 <button class="operator" id="plus">+</button>
