Rework UI for better display
Rework the UI and finalize outlook. Dark theme was
introduced instead of bright gradients. Finalise
layout, button placement, colour scheme and small
interactive and feedback elements.

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
         </div>
         <div class="calculator-buttons">
             <div class="column-one">
-                <button class="digit" id="1">1</button>
-                <button class="digit" id="4">4</button>
-                <button class="digit" id="7">7</button>
+                <button class="digit" id="digit-1">1</button>
+                <button class="digit" id="digit-4">4</button>
+                <button class="digit" id="digit-7">7</button>
                 <button class="digit" id="floating-point">.</button>
             </div>
             <div class="column-two">
-                <button class="digit" id="2">2</button>
-                <button class="digit" id="5">5</button>
-                <button class="digit" id="8">8</button>
-                <button class="digit" id="0">0</button>
+                <button class="digit" id="digit-2">2</button>
+                <button class="digit" id="digit-5">5</button>
+                <button class="digit" id="digit-8">8</button>
+                <button class="digit" id="digit-0">0</button>
             </div>
             <div class="column-three">
-                <button class="digit" id="3">3</button>
-                <button class="digit" id="6">6</button>
-                <button class="digit"id="9">9</button>
+                <button class="digit" id="digit-3">3</button>
+                <button class="digit" id="digit-6">6</button>
+                <button class="digit"id="digit-9">9</button>
                 <button id="plus-minus">+/-</button>
             </div>
             <div class="column-four">
